# Poetry

./: pyproject.toml
Python-WEB-Homework-2/clipack/clipack/: Dockerfile  README.md  classes.py  file_sorter.py  main.py  pyproject.toml  requirements.txt
