[tool.poetry]
name = "python-web-homework2"
version = "0.1.0"
description = "Using Poetry for my bot assistant"
authors = ["Yaroslava Segal <yaroslavasiehal@gmail.com>"]
license = "0.1"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"

[tool.poetry.group.dev.dependencies]
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
