[tool.poetry]
name = "python-web-homework2"
version = "0.1.0"
description = "Using Poetry for my bot assistant"
authors = ["Yaroslava Segal <yaroslavasiehal@gmail.com>"]
license = "1.0.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
